<resources>
    <string name="app_name">iMageBtApp</string>
    <string name="btnUpdate">Update</string>
    <string name="btnCon">BT Con</string>
    <string name="btnPair">Pair</string>
    <string name="btnRead">Read</string>
    <string name="btnWrite">Write</string>
    <string name="btnDiscovery">Discovery</string>
    <string name="txvRecyclerTitle">non activity</string>
    <string name="txvFeatureTitle">Feature Set</string>
    <string name="txvVolumeTitle">Volume Set</string>
    <string name="txvStaBat">B:5</string>
    <string name="txvStaRssi">R:5</string>
    <string name="txvStaConnected">Connected</string>
    <string name="txvStaConnecting">Connecting</string>
    <string name="txvStaDiscon">Disconnect</string>
    <string name="txvStaEnable">Enable</string>
    <string name="txvStaDisable">Disable</string>
    <string name="txvStaDiscovey">Find Device</string>
    <string name="txvStaDiscoveryStart">Discovery Device</string>
    <string name="txvStaDiscoveryEnd">Discovered Device</string>
    <string name="txvPairTitle">non activity</string>
    <string name="txvStaPaired">List Paired Device</string>
    <string name="txvDevSrc">SRC</string>
    <string name="txvDevAllAg">All AG</string>
    <string name="txvDevAllHfp">All HFP</string>
    <string name="txvModeWired">Wired</string>
    <string name="txvModeUsb">USB</string>
    <string name="txvModeBt">BT</string>
    <string name="txvModeVcs">VCS</string>
    <string name="txvFeature0">Fixed Device</string>
    <string name="txvFeature1">Clear Mute</string>
    <string name="txvFeature2">2</string>
    <string name="txvFeature3">3</string>
    <string name="txvFeature4">Disable CVC</string>
    <string name="txvFeature5">Enable I2S Output</string>
    <string name="txvFeature6">Enable Loop Back</string>
    <string name="txvFeature7">Enable A2DP</string>
    <string name="txvFeature8">Disable Filter BDA</string>
    <string name="txvFeature9">Enable I2S Input</string>
    <string name="txvFeatureA">10</string>
    <string name="txvFeatureB">11</string>
    <string name="txvFeatureC">12</string>
    <string name="txvFeatureD">Enable BLE</string>
    <string name="txvFeatureE">14</string>
    <string name="txvFeatureF">Enable Expan Function</string>
    <string name="txvFilterBda">Filter BDA:</string>
    <string name="txvDecadeSpkrHfp">HFP Speaker Decade</string>
    <string name="txvDecadeSpkrAv">A2DP speaker Decade</string>
    <string name="txvVolumeSrc">Source Device Volume Set</string>
    <string name="txvVolumeAg">HFP Device Volume Set</string>
    <string name="txvStaBatLow">L:</string>
    <string name="txvStaBatChg">C:</string>
    <string name="txvStaBatPwr">P:</string>
    <string name="timeUpdate">30000</string>
</resources>
