<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txvConSta0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/txvStaDisable"
        app:layout_constraintStart_toEndOf="@+id/btnCon"
        app:layout_constraintTop_toTopOf="@+id/btnCon" />

    <TextView
        android:id="@+id/txvConSta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txvStaDisable"
        app:layout_constraintBottom_toBottomOf="@+id/btnCon"
        app:layout_constraintStart_toStartOf="@+id/txvConSta0" />

    <Button
        android:id="@+id/btnCon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnCon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPagerM6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnCon"
        app:layout_constraintTop_toBottomOf="@+id/btnCon" />

    <Button
        android:id="@+id/btnStaUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/btnUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnCon" />

</androidx.constraintlayout.widget.ConstraintLayout>